fix: horizontal scroll bar no longer appears when modal launches

--- a/notgpt-cli/src/App.scss
+++ b/notgpt-cli/src/App.scss
@@ -147,14 +147,13 @@
 $modal-width: 450px;
 $modal-height: 200px;
 .modal-wrapper {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   display: flex;
   top: 0;
   left: 0;
   z-index: 3;
-
 }
 
 .modal-container { // modal window
